--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="save">Save</string>
     <string name="contact_details">Contact details</string>
     <string name="contact_list">Contact list</string>
+    <string name="remove_contact">Remove Contact</string>
+    <string name="edit_contact">Edit Contact</string>
+    <string name="contact_removed">Contact Removed</string>
 </resources>
